# depshield

./: .gitignore  .pyre_configuration  README.md  SETUP.md  pyproject.toml  setup.bat
depshield/: __init__.py  cli.py
depshield/resolvers/: __init__.py  npm_resolver.py
